Melhorias na tela inicial, validação de livro duplicado e organização do projeto
Fiz várias melhorias no projeto neste commit:

- Tela inicial: a mensagem 'Nenhum livro sendo lido no momento' agora aparece centralizada no meio da tela, com ícone maior e um subtítulo explicativo para o usuário
- Footer: adicionei mais espaçamento acima do rodapé para não ficar colado no conteúdo
- Backend: implementei a validação de livro duplicado no serviço de livros. Quando o usuário tenta cadastrar um livro com o mesmo título e autor que já existe, o sistema retorna erro 409 (Conflito)
- Frontend: o formulário de cadastro de livro agora exibe a mensagem de erro de forma inline, sem usar alert() do navegador, ficando mais elegante
- Limpeza: removi os arquivos .md que não eram necessários (ANALISE_PROJETO, CONFIRMACAO_SONAR, CORRECOES_REALIZADAS, GUIA_SONARCLOUD, NOVAS_FUNCIONALIDADES)
- Segurança: atualizei o .gitignore para nunca subir o arquivo application.properties com as senhas do banco de dados, variáveis de ambiente, pasta target e node_modules
- Removi o application.properties do rastreamento do git para proteger as credenciais
- Criei o arquivo application.properties.example como modelo seguro para os outros membros do grupo configurarem o banco